[tool.poetry]
name = "fastapi_template"
version = "0.1.0"
description = ""
authors = ["Brian-Bowyer <bobsnake64@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
starlette = "^0.19.1"
pydantic = {version = "^1.9.1", extras = ["email"]}
uvicorn = "^0.18.2"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
