[tool.poetry]
name = "fastapi_template"
version = "0.1.0"
description = ""
authors = ["Brian-Bowyer <bobsnake64@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110"
starlette = "^0.36"
pydantic = "^2.6.4"
uvicorn = "^0.29"
gunicorn = "^21.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = "tests"
python_functions = "it_*"
addopts = "-x --ff"

[tool.black]
line-length = 90